--- a/views/index.ejs
+++ b/views/index.ejs
@@ -96,7 +96,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>25 Sep 2000</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Github Link:</strong> <span> <a href="https://github.com/YashMaske2590">Click Here</a></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Github Link:</strong> <span> <a href=git@github.com:YashMaske2590/Portfolio.git>Click Here</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 7020108935</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Kothrud,Pune</span></li>
                 </ul>
